Update to version 2.3

--- a/net/lynx/samples/new_installs.html
+++ b/net/lynx/samples/new_installs.html
@@ -18,9 +18,8 @@ To send a comment simply press 'c', or select
 
 You can sign up for the listserv by selecting 
 <a href="mailto:listserv@ukanaix.cc.ukans.edu">this link</a>
-and putting "signup lynx-dev YOUR FULL NAME" as the body
+and putting "subscribe lynx-dev YOUR FULL NAME" as the body
 of the message.
 
-:lou
-montulli@ukanaix.cc.ukans.edu
-
+:Garrett Arch Blythe
+lynx-help@ukanaix.cc.ukans.edu
