--- a/net/lynx/test/formtest.html
+++ b/net/lynx/test/formtest.html
@@ -5,3 +5,92 @@
 <li><a href="http://www.ncsa.uiuc.edu/SDG/Software/Mosaic/Docs/fill-out-forms">forms directory at NCSA</a>
 
 <li><a href="http://www.ncsa.uiuc.edu/SDG/Software/Mosaic/Docs/fill-out-forms/overview.html">forms overview at NCSA</a>
+</ul>
+
+<form action=mailto:lynx-help@ukanaix>
+
+<h1>Big huge form</h1>
+
+<input type=checkbox name=test2> test<p>
+
+Test line<br>
+Test line<br>
+
+this is a test of a 5 field option list <select name=test>
+<option>number 1
+<option>choice 2
+<option SELECTED>number 3
+<option>really long number 4
+<option SELECTED>number 5
+<option>number 6
+</select><p>
+Test<br>
+Test<br>
+Test <input type=reset><br>
+Test<br>
+Test<p>
+
+this is a test of a 12 field option list <select name=test>
+<option>number 1
+<option>choice 2
+<option>number 3
+<option>really long number 4
+<option SELECTED>number 5
+<option>number 6
+<option>number 7
+<option>number 8
+<option>number 9
+<option>number 10
+<option>number 11
+<option>choice 12
+</select><p>
+
+Test line<p>
+Test line<p>
+Test line<p>
+Test line<p>
+
+This is a test of a 40 field option list <select name=test>
+<option>number 1
+<option>choice 2
+<option>number 3
+<option>really long number 4
+<option>number 5
+<option>number 6
+<option>number 7
+<option>number 8
+<option>number 9
+<option>number 10
+<option>number 11
+<option>choice 12
+<option>number 13
+<option>really long number 14
+<option CHECKED>number 15
+<option>number 16
+<option>number 17
+<option>number 18
+<option>number 19
+<option>number 20
+<option>number 21
+<option>choice 22
+<option>number 23
+<option>really long number 24
+<option selected>number 25
+<option>number 26
+<option>number 27
+<option>number 28
+<option>number 29
+<option>number 30
+<option>number 31
+<option>choice 32
+<option>number 33
+<option>really long number 34
+<option CHECKED>number 35
+<option>number 36
+<option>number 37
+<option>number 38
+<option>number 39
+<option>number 40
+</select>
+<p>
+<input type=submit>
