--- a/net/lynx/test/test2.html
+++ b/net/lynx/test/test2.html
@@ -1,25 +1,17 @@
 <HTML>
 <HEAD>
 <title>Neurospora Galapagosensis</title>
-<link rev=made href="mailto:fgsc@ukanvm.cc.ukans.edu">
+<link rev=made href="mailto:lynx-help@ukanaix.cc.ukans.edu">
 </HEAD>
 <BODY>
 
-<H1>Neurospora Galapagosensis</h1>
-
-<dl>
-<dt>FGSC: 1739
-<dd>location: Isla Santa Cruz<br>
-G349<br>
-Mating Type: B<br>
-Stock Number from other collection: 18746<br>
-Obtained from: ATCC
-
-<dt>FGSC: 4628
-<dd>location: Dominica Island<br>
-D301<br>
-Mating Type: B<br>
-Stock Number from other collection: D301<br>
-Obtained from: DDP
-</dl>
-</body>
+<dir>
+<li>a;lkdjf
+<li>a;lkdjf
+<li>a;lkdjf
+<li>a;lkdjf
+<li>a;lkdjf
+<li>a;lkdjf
+<li>a;lkdjf
+<li>a;lkdjf
+</dir>
