--- a/net/lynx/test/test.html
+++ b/net/lynx/test/test.html
@@ -1,21 +1,27 @@
-<title>test  document</title>
-<head>
-<body>
+<title>test  document &amp;  &lt;</title>
 
 <h1>Test document</h1>
 
 
      <a href="http://info.cern.ch/hypertext/WWW/Test/Overview.html">Test data for new browsers etc</a>
 <hr>
+<h1>Textarea forms handleing test</h1>
 
-<HEAD>
-<TITLE> Software Installation</TITLE>
-</HEAD>
-<BODY><P>
-    type 1 2 or 3 ...</TT></PRE>
-    Choice <i>1</i> will initiate an automatic installation process
-    which will take about 40 minutes.  On the Service Terminal
-    type <tt>&quot;1&quot;</tt> and RETURN. Because the automatic installation p
-rocess
-</BODY>
+<a href=null><h1>test heading and anchor</h1></a>
 
+<a href=null><h2>test heading and anchor</h2></a>
+
+<a href=null><h3>test heading and anchor with a really lonog title to try 
+aon confuse you not quite long enough
+</h3></a>
+
+<a href=null><h4>test heading and anchor</h4></a>
+
+<a href=null><h5>test heading and anchor</h5></a>
+
+<a href=null><h6>test heading and anchor</h6></a>
+
+<a href=null><h7>test heading and anchor</h7></a>
+<a href=null><h8>test heading and anchor</h8></a>
+
+<a href=null1>testing</a>
